objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>Contract_End__c</fullName>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Start__c</fullName>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Revenue_Type__c</fullName>
        <formula>IF( 
OR(
PricebookEntry.Product2.Name = 'Services', 
PricebookEntry.Product2.Name = 'DOC Data Configuration', 
PricebookEntry.Product2.Name = 'DOC Library Configuration'
), 'Services Revenue', 
IF( 
OR(
PricebookEntry.Product2.Name = 'Subscription',
PricebookEntry.Product2.Name = 'DOC Label',
PricebookEntry.Product2.Name = 'DOC Nhanes',
PricebookEntry.Product2.Name = 'IMHE',
PricebookEntry.Product2.Name = 'DOC Library Licensing',
PricebookEntry.Product2.Name = 'DOC Data Licensing'
), 'Subscription Revenue', 'No Type'))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Revenue Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Discount__c</fullName>
        <formula>(ListPrice - UnitPrice) * Quantity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>